[package]
name = "radio"
description = "Generic traits for embedded packet radio devices"
repository = "https://github.com/annie444/radio-hal"
authors = ["Ryan Kurte <ryankurte@gmail.com>", "Annie Ehler <annie.ehler.4@gmail.com"]
license = "MIT"
edition = "2024"
version = "0.12.1"

[package.metadata.docs.rs]
features = [ "std", "nonblocking", "mock", "helpers", "log", "clap" ]

[features]
std = [ "dep:humantime" ]
nonblocking = [ ]
mock = [ "dep:embedded-hal-mock" ]
helpers = [ "clap", "dep:humantime", "std", "dep:pcap-file", "dep:libc", "dep:byteorder", "dep:rolling-stats", "log" ]
default = [ ]
log = [ "dep:log" ]
clap = [ "dep:clap" ]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-mock = { version = "0.11.1", optional = true }
nb = "1.1.0"

log = { version = "0.4.27", default-features = false, optional = true }
defmt = { version = "1.0.1", optional = true }

chrono = { version = "0.4.41", default-features = false }
humantime = { version = "2.2.0", optional = true }
pcap-file = { version = "2.0.0", optional = true }
async-std = { version = "1.13.1", optional = true }
libc = { version = "0.2.172", optional = true }
byteorder = { version = "1.5.0", optional = true }
rolling-stats = { version = "0.7.0", optional = true }
thiserror = { version = "2.0.12", optional = true }
clap = { version = "4.5.38", optional = true, features = [ "derive" ] }

[dev-dependencies]
anyhow = "1.0.98"
